2000-05-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.c (tag_file): don't initialize dir if not given, simplified
	strcmp.
	(change_curdir): simplified strncmp.

1999-05-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_reconnect): reset ftp_curmode to ' '.

1999-04-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (parse_ms): new function.
	(read_dir): loop over parser functions until accepted.  free line
	here.
	(parse_unix): reject line if strcspn(line, " ") != 10.  don't free
	line.

1999-02-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* added 1999 to copyright notices.
	* readrc.c (readrc): remember password when part of alias url.

1998-12-31  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_retr): place size from 150 response in *sizep (new
	argument); changed callers.
	* fn_select.c (aux_download): use size from ftp_retr if size
	unknown.

1998-12-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c (argstostr): removed (args_to_string is
	duplicate), changed callers.
	(args_to_string): fixed bug which placed all args at beginning of
	string.
	
1998-10-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* display.h, options.op, list.c (list_full),
	status.c (opt_set_status): removed opt_emacs_status.

	* status.c (status_do): handle short status line (space < 0).

1998-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* bindings.desc: added mkdir, site.

	* util.h, util.c (args_to_string): new function.

	* ftp.h, ftp.c (ftp_site): new function.

	* fntable.fn, fn_basic.c (fn_site): new function.

1998-10-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_stor): accept response 125.

1998-10-07  Wiz  <wiz@danbala.tuwien.ac.at>

	* fn_select.c (fn_reload): reload logically current dir, not
	physically current.

	* bindings.desc, fn_basic.c (fn_showname): new option -l: show
	link target.

	* readdir.c (parse_unix): better parsing of symbolic links (Windows).
